# maze-tower

./: .gitignore
server/: Makefile  maze-tower.cabal
server/assets/: index.js
server/src/: Main.hs  Maze.hs  Routes.hs
server/src/Views/: Index.hs  NotFound.hs
ui/: elm.json  package-lock.json  package.json
ui/src/: Api.elm  Cell.elm  Main.elm  Maze.elm  Msg.elm  Point.elm
